# sim

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  PROVINCES.TXT  README.md  a.out  log.txt  main.cpp  sfml-app
csv/: characters.csv  provinces.csv  provinces1.csv  unit_types.csv
data/: characters.csv  countries.csv  neighbours.txt  provinces.csv  religions.csv  unit_types.csv
src/: building.cpp  building.hpp  character.cpp  character.hpp  configs.h  country.cpp  country.hpp  culture.cpp  culture.hpp  diplomacy.hpp  main.cpp  population.cpp  population.hpp  province.cpp  province.hpp  regiment.hpp  religion.hpp  world.cpp  world.hpp
src/agents/: ai_character.cpp  ai_character.hpp  event_manager.cpp  event_manager.hpp  events.cpp  events.hpp
src/economy/: good.cpp  good.hpp  market.cpp  market.hpp
src/gameplay/: player.cpp  player.hpp
src/generation/: FastNoiseLite.h  generation.hpp
src/graphics/: TileMap.hpp  colors.hpp  game.hpp  raygui.h  raytest.hpp  rayutils.h  render_maps.cpp  render_maps.hpp  screen_game.cpp  screen_loading.cpp  screens.hpp  utils.hpp  window.hpp
src/utils/: date.cpp  date.hpp  load_files.hpp  mercator.hpp  read_csv.hpp  wgen.hpp
utils/: character.hpp  country.hpp  province.hpp  read_csv.hpp  world.hpp
